<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校友邦</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_page_title">广场</string>
    <string name="hide_name">匿名提问</string>
    <string name="hide_name1">匿名回答</string>
    <string name="add_question_text1">添加提问</string>
    <string name="add_question_text2">发布</string>
    <string name="add_question_hint1">请简要描述你的提问或问题</string>
    <string name="add_question_hint2">请补充你的想法、要求等</string>
    <string name="add_answer_text1">添加回答</string>
    <string name="add_answer_hint1">写下答案、建议、参考</string>
    <string name="add_picture_text1">添加照片</string>
    <string name="question_text_1">回答</string>
    <string name="question_text_2">赞</string>
    <string name="question_text_3">评论</string>
    <string name="question_text_4">添加回答</string>
    <string name="question_text_5">邀请回答</string>
    <string name="start_text1">登陆</string>
    <string name="start_text2">注册</string>
    <string name="start_text3">手机号</string>
    <string name="start_text3_">输入11位手机号</string>
    <string name="start_text4">密码</string>
    <string name="start_text4__">输入密码</string>
    <string name="start_text4_">再次输入密码</string>
    <string name="start_text5">下一步</string>
    <string name="start_text6">输入验证码</string>
    <string name="start_text7">发送验证码</string>
    <string name="start_text8">我的真像</string>
    <string name="start_text9">雄</string>
    <string name="start_text10">雌</string>
    <string name="start_text11">姓名</string>
    <string name="start_text12">出生年份，例1980</string>
    <string name="start_text13">北大所在院系</string>
    <string name="start_text14">现居地，例四川省成都市</string>
    <string name="start_text15">故乡，例黑龙江省哈尔滨市</string>
    <string name="start_text16">网络联系方式，电邮/QQ/微信</string>
    <string name="start_text17">现工作单位，学生请填在读</string>
    <string name="start_text18">所在部门</string>
    <string name="start_text19">职位</string>
    <string name="start_text20">完成</string>
    <string name="start_text21">标签1</string>
    <string name="start_text22">标签2</string>
    <string name="start_text23">标签3</string>
    <string name="start_text24">标签4</string>
    <string name="start_text25">标签5</string>
    <string name="start_text26">请填写以下的标签，以便大家了解你（皆为选填）可以是特长、兴趣爱好、资源、关注点或其它任何你觉得值得分享的东西</string>
    <string name="start_text27">手机注册</string>
    <string name="start_text28">自我介绍</string>
    <string name="start_text29">工作信息</string>
    <string name="start_text30">标签</string>
    <string name="add_comment_text1">发表</string>
    <string name="add_comment_text2">请写下你的评论</string>
    <string name="add_comment_text3">问题的评论</string>
    <string name="tab_1">广场</string>
    <string name="tab_2">问过</string>
    <string name="tab_3">答过</string>
    <string name="tab_4">消息</string>
    <string name="tab_5">校友录</string>
    <string name="friend_info_1">他答过我</string>
    <string name="friend_info_2">我答过他</string>
    <string name="friend_info_3">注册邀请人</string>
    <string name="friend_info_4">问过</string>
    <string name="friend_info_5">答过</string>
    <string name="friend_info_6">元老</string>
    <string name="friend_info_7">我的资料</string>
    <string name="friend_info_8">校友资料</string>
    <string name="tab_text_1">我的提问</string>
    <string name="tab_text_4">编辑</string>
    <string name="tab_text_4_1">编辑我的资料</string>
    <string name="tab_text_4_2">出生年份</string>
    <string name="tab_text_4_3">现居地</string>
    <string name="tab_text_4_4">故乡</string>
    <string name="tab_text_4_5">工作单位/公司/机构</string>
    <string name="tab_text_4_6">修改密码</string>
    <string name="tab_text_4_7">退出登录</string>
    <string name="tab_text_4_8">输入原密码</string>
    <string name="tab_text_4_9">我的回答</string>
    <string name="tab_text_5_1">我的消息</string>
    <string name="tab_text_5_2">校友</string>
    <string name="pop_text_1">回复</string>
    <string name="pop_text_2">复制</string>
    <string name="invite_text_1">输入姓名，或点击头像选择</string>
    <string name="invite_text_2">请写下你的邀请理由，将发表在问题的评论区</string>
    <string name="invite_text_3">提交</string>
    <string name="invite_text_4">邀请详情</string>
    <string name="invite_text_5">受邀</string>
    <string name="invite_text_6">邀请</string>
    <string name="invite_text_7">已作答</string>
    <string name="invite_text_8">邀请你回答</string>
    <string name="invite_text_9">你邀请</string>
    <string name="invite_text_10">回答</string>
    <string name="invite_text_11">选择邀请人</string>
    
    <string name="temp_text_1">选择文件夹</string>
    <string name="temp_text_2">选择照片</string>
    <string name="temp_text_3">相册</string>
    <string name="temp_text_4">拍照</string>
    <string name="temp_text_5">取消</string>
    <string name="temp_text_6">评论互动 >></string>
    <string name="temp_text_7">沉思中，稍后作答</string>
    <string name="temp_text_8">帮你留意着</string>
    <string name="temp_text_9">爱莫能助的飘过</string>
    <string name="temp_text_10">评论灌水</string>
    <string name="temp_text_11">关心一下</string>
    <string name="temp_text_12">编辑自我介绍</string>
    <string name="temp_text_13">请向校友全面地介绍你吧</string>
    <string name="temp_text_14">留言板-主人寄语</string>
    <string name="temp_text_15">请在你的留言板上，跟大家说句话吧</string>
    <string name="temp_text_16">主人寄语</string>
    <string name="temp_text_17">留言板</string>
    <string name="temp_text_18">编辑寄语</string>
    <string name="temp_text_19">相关</string>
    <string name="temp_text_20">收藏</string>
    
    <string name="act_text_1">发起活动</string>
    <string name="act_text_2">请输入活动的标题，限30字…</string>
    <string name="act_text_3">活动时间</string>
    <string name="act_text_4">活动地点</string>
    <string name="act_text_5">活动费用</string>
    <string name="act_text_6">请描述活动的详细内容，包括发起初心、场地魅力、活动计划、交通提示、初步报名情况等…</string>
    <string name="act_text_7">我要报名</string>
    <string name="act_text_8">邀请参加</string>
    <string name="act_text_9">活动总结</string>
    <string name="act_text_10">编辑活动</string>
    <string name="act_text_11">对活动点赞</string>
    <string name="act_text_12">报名 >></string>
    <string name="act_text_13">添加总结</string>
    <string name="act_text_14">灌水/邀请</string>
    
    <string name="start_1">与校友分享你的</string>
    <string name="start_2">智慧、资源与人脉</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="password_text1">忘记密码</string>
    <string name="password_text2">重置密码</string>
    <string name="password_text3">获取验证码</string>
    <string name="password_text4">输入邀请码</string>
    <string name="password_text5">密码最长16位，由字母、数字和各类英文符号组成，字母区分大小写</string>
    <string name="password_text6">输入邀请人姓名</string>
    
</resources>