<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/bg_red"
    >
    
    <ImageView 
        android:id="@+id/start_image"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:src="@drawable/start"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        />
    
    <TextView 
        android:id="@+id/start_temp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/start_image"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_2"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/start_temp1"
        />

</RelativeLayout>
