<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    >
    
    <RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/red"
		>
		
        <Button 
		    android:id="@+id/change_password_button_back"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_centerVertical="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="3dp"
		    android:textColor="@color/white"
			android:textSize="@dimen/text_size_1"
			android:background="@null"
		    />
        
        <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:text="@string/tab_text_4_6"
		    android:textColor="@color/white"
		    android:textSize="@dimen/text_size_1"
		    android:layout_centerHorizontal="true"
		    />
        
	</RelativeLayout>
	
    <EditText 
        android:id="@+id/change_password_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/tab_text_4_8"
        android:background="@drawable/edittext_bg"
        android:textSize="@dimen/text_size_1"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/gray"
        />
	
    <EditText 
        android:id="@+id/change_password_password1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/start_text4__"
        android:background="@drawable/edittext_bg"
        android:textSize="@dimen/text_size_1"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/gray"
        />
    
    <EditText 
        android:id="@+id/change_password_password2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:maxLength="16"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/start_text4_"
        android:background="@drawable/edittext_bg"
        android:textSize="@dimen/text_size_1"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/gray"
        />
    
    <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:maxLines="2"
		    android:lineSpacingMultiplier="1.2"
		    android:text="@string/password_text5"
		    android:textColor="@color/gray"
		    android:textSize="@dimen/text_size_2"
		    android:layout_marginLeft="30dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginRight="30dp"
		    />
    
    <Button 
        android:id="@+id/change_password_button_finish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/red"
        android:text="@string/invite_text_3"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_2"
        />

</LinearLayout>