<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/light_gray"
    >
    
    <RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/red"
		>
		
        <Button 
		    android:id="@+id/forget_password1_button_back"
		    android:layout_width="50dp"
		    android:layout_height="30dp"
		    android:layout_centerVertical="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="15dp"
		    android:textColor="@color/white"
			android:textSize="@dimen/text_size_1"
			android:background="@null"
		    />
        
        <TextView 
            android:id="@+id/forget_password1_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:text="@string/password_text2"
		    android:textColor="@color/white"
		    android:textSize="@dimen/text_size_1"
		    android:layout_toRightOf="@+id/forget_password1_button_back"
		    android:layout_marginLeft="20dp"
		    />
        
	</RelativeLayout>
	
    <EditText 
        android:id="@+id/forget_password1_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/start_text11"
        android:background="@drawable/edittext_bg"
        android:textSize="@dimen/text_size_1"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/gray"
        />
    
    <EditText 
	        android:id="@+id/forget_password1_phone"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:inputType="phone"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:hint="@string/start_text3"
	        android:background="@drawable/edittext_bg"
	        android:textSize="@dimen/text_size_1"
	        android:paddingLeft="15dp"
	        android:singleLine="true"
	        android:textColorHint="@color/gray"
	        />

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        
        <EditText 
	        android:id="@+id/forget_password1_code"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:inputType="phone"
	        android:maxLength="11"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:hint="@string/password_text4"
	        android:background="@drawable/edittext_bg"
	        android:textSize="@dimen/text_size_1"
	        android:paddingLeft="15dp"
	        android:singleLine="true"
	        android:textColorHint="@color/gray"
	        />
        
        <Button 
	        android:id="@+id/forget_password1_button_send"
	        android:layout_width="100dp"
	        android:layout_height="30dp"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="40dp"
	        android:background="@color/red"
	        android:text="@string/password_text3"
	        android:textColor="@color/white"
	        android:textSize="@dimen/text_size_2"
	        />
        
    </RelativeLayout>
    
    <Button 
        android:id="@+id/forget_password1_button_finish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/red"
        android:text="@string/invite_text_3"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_2"
        />

</LinearLayout>
